Fix double scroll bar when webpages are maximized (#149)

--- a/src/renderer/App/components/Board/style.scss
+++ b/src/renderer/App/components/Board/style.scss
@@ -12,3 +12,8 @@
     #7a2c9e 129.35%
   );
 }
+
+.Board__is-full-size {
+  overflow: hidden;
+  height: 100% !important;
+}
